# bullseye

./: .dockerignore  .gitignore  LICENSE-MIT  README.md  create_db.py
.github/workflows/: client-docker-image.yml  push-client-to-docker-hub.yml  push-client-to-docker-registry.yml  push-server-to-docker-registry.yml  test-client.yml  test-common.yml  test-server.yml
client/: Cargo.toml  Dockerfile
client/src/: main.rs
common/: Cargo.toml
common/src/: data.rs  db.rs  helpers.rs  lib.rs  payloads.rs
common/src/db/: data.rs  mod.rs
server/: Cargo.toml  Dockerfile
server/src/: files.rs  main.rs  payloads.rs
