[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
deadpool = "0.10"
fix-hidden-lifetime-bug = "0.2.7"
futures = "0.3.31"
serde = "1.0.210"
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["rt"] }
unreql = "0.1.8"
unreql_deadpool = "0.1.1"
uuidv7 = "0.1.4"
