[package]
name = "bullseye-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-stream = "0.3.6"
common = { version = "0.1.0", path = "../common", features = ["db"] }
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
nix = { version = "0.29.0", features = ["fs"] }
serde = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs"] }
uuidv7 = "0.1.4"
